k8s/base/django/celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  labels:
    app: celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: celery
          image: beany258/django:1.0.21
          command: ["/bin/sh", "-c"]
          args: ["cd /app && celery -A config worker -l info"]
          volumeMounts:
            - name: media
              mountPath: /app/media
            - name: static
              mountPath: /app/static
            - name: google-service-account
              mountPath: /app/secrets
              readOnly: true
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: django-media-pvc
        - name: static
          persistentVolumeClaim:
            claimName: django-static-pvc
        - name: google-service-account
          secret:
            secretName: google-service-account
