k8s/base/django/cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-cron
  labels:
    app: django-cron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-cron
  template:
    metadata:
      labels:
        app: django-cron
    spec:
      containers:
        - name: django-cron
          image: beany258/django:1.0.7
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          volumeMounts:
            - name: media
              mountPath: /app/media
            - name: logs
              mountPath: /app/logs
            - name: google-service-account
              mountPath: /app/secrets
              readOnly: true
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: django-media-pvc
        - name: logs
          emptyDir: {}
        - name: google-service-account
          secret:
            secretName: google-service-account
