k8s/base/django/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: beany258/django:1.0.11
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: media
              mountPath: /app/media
            - name: static
              mountPath: /app/static
            - name: google-service-account
              mountPath: /app/secrets
              readOnly: true
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cd /app && python manage.py collectstatic --noinput"]
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: django-media-pvc
        - name: static
          persistentVolumeClaim:
            claimName: django-static-pvc
        - name: google-service-account
          secret:
            secretName: google-service-account
