k8s/base/django/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app: django
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
